Fixed white space at top of main page and contact section at bottom for 1152 x 720, 1280x800, 1920x1080, & 1366x768 (large and medium desktop displays).  Reduced height of background of online fiction page and its section, shifting up book entries.

--- a/books/assets/css/main.css
+++ b/books/assets/css/main.css
@@ -144,27 +144,6 @@ a:after {
    Wrap Sections
    ========================================================================== */
 
-#headerwrap {
-	background: url(../img/AuroraBorealisDrawing.jpg) no-repeat center top;
-	/*background: url(../img/header-gb.jpg) no-repeat center top;*/
-	margin-top: -10px;
-	padding-top:20px;
-	text-align:center;
-	background-attachment: relative;
-	background-position: center center;
-	min-height: 700px;
-	width: 100%;
-	
-    -webkit-background-size: 100%;
-    -moz-background-size: 100%;
-    -o-background-size: 100%;
-    background-size: 100%;
-
-    -webkit-background-size: cover;
-    -moz-background-size: cover;
-    -o-background-size: cover;
-    background-size: cover;
-}
 
 #headerwrap h1 {
 	/*margin-top: 150px;*/
