--- a/main/assets/css/main.css
+++ b/main/assets/css/main.css
@@ -620,3 +620,12 @@ a:after {
 	}
 }
 
+@media only screen and (max-width: 1152px) and (max-height: 720px) and (orientation: landscape) {
+    #greywrap {
+        background: #f5f5f5;
+        margin-top: 0px;
+        border-bottom: 1px solid #ddd;
+        text-align: center;
+        padding-top: 0px;
+    }    
+}
